added responsive logic to the notification dropdown

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -50,22 +50,41 @@
                       </div>
                       <div class="notifications-dropdown__toggle-title">4</div>
                     </div>
-                    <div class="dropdown__body notifications-dropdown__body">
-                      <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                    <div class="dropdown__box notifications-dropdown__box">
+                      <div class="notifications-dropdown__wrap">
+                        <div class="notifications-dropdown__header">
+                          <div class="content-header">
+                            <div class="content-header__title">
+                              <h3>Notifications</h3>
+                            </div>
+                            <div class="content-header__close">
+                              <div class="close" data-dropdown-close="notifications">
+                                <svg class="svg-icon svg-icon--alto" width="15" height="15">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                                </svg>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="header__dropdown">
-                  <div class="select js-select select--inline select--h-100">
+                  <div class="select js-select select--transparent header__dropdown-lang">
                     <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                     </button>
                     <div class="select__dropdown js-select-dropdown">
-                      <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
+                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
                         <div class="select__options js-select-options">
                           <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
                           <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
@@ -90,7 +109,7 @@
                         </svg>
                       </div>
                     </div>
-                    <div class="dropdown__body user-dropdown__body">
+                    <div class="dropdown__box user-dropdown__box">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
                           <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link " href="settings-page.html">
@@ -204,7 +223,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="dropdown__body change-position-dropdown__body">
+                                <div class="dropdown__box change-position-dropdown__box">
                                   <div class="change-position-dropdown__header">
                                     <h5>Change position</h5>
                                     <h5 class="text-silver-chalice">5234 positions</h5>
@@ -856,7 +875,7 @@
                                     </svg>
                                   </button>
                                 </div>
-                                <div class="dropdown__body manage-skills-dropdown__body">
+                                <div class="dropdown__box manage-skills-dropdown__box">
                                   <div class="manage-skills js-manage-skills">
                                     <div class="manage-skills__title">
                                       <p class="font-semibold">Create new:</p>
@@ -1207,7 +1226,7 @@
                                     </svg>
                                   </button>
                                 </div>
-                                <div class="dropdown__body manage-skills-dropdown__body">
+                                <div class="dropdown__box manage-skills-dropdown__box">
                                   <div class="manage-skills js-manage-skills">
                                     <div class="manage-skills__title">
                                       <p class="font-semibold">Create new:</p>
@@ -2037,7 +2056,7 @@
                                     <button class="select__label js-select-label" data-selected="translation" type="button"><span>Translation</span>
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
-                                      <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
                                           <div class="select__option js-select-option" data-option="translation"><span>Translation</span></div>
                                           <div class="select__option js-select-option" data-option="translation 2"><span>Translation 2</span></div>
@@ -2060,7 +2079,7 @@
                                         <button class="select__label js-select-label" data-selected="DHL" type="button"><span>DHL</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="DHL"><span>DHL</span></div>
                                               <div class="select__option js-select-option" data-option="DHL 2"><span>DHL 2</span></div>
@@ -2096,7 +2115,7 @@
                                         <button class="select__label js-select-label" data-selected="source" type="button"><span>Source</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="source"><span>Source</span></div>
                                               <div class="select__option js-select-option" data-option="source 2"><span>Source 2</span></div>
@@ -2112,7 +2131,7 @@
                                         <button class="select__label js-select-label" data-selected="target" type="button"><span>Target</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="target"><span>Target</span></div>
                                               <div class="select__option js-select-option" data-option="target 2"><span>Target 2</span></div>
@@ -2137,7 +2156,7 @@
                                         <button class="select__label js-select-label" data-selected="lating" type="button"><span>Lating</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="lating"><span>Lating</span></div>
                                               <div class="select__option js-select-option" data-option="lating 2"><span>Lating 2</span></div>
@@ -2167,7 +2186,7 @@
                                     <button class="select__label js-select-label" data-selected="-1 hours" type="button"><span>-1 hours</span>
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
-                                      <div class="custom-scroll select__dropdown-scroll" data-simplebar>
+                                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
                                           <div class="select__option js-select-option" data-option="-1 hours"><span>-1 hours</span></div>
                                           <div class="select__option js-select-option" data-option="-1 hours 2"><span>-1 hours 2</span></div>
