--- a/app/static/permissions-page.html
+++ b/app/static/permissions-page.html
@@ -50,22 +50,41 @@
                       </div>
                       <div class="notifications-dropdown__toggle-title">4</div>
                     </div>
-                    <div class="dropdown__body notifications-dropdown__body">
-                      <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                    <div class="dropdown__box notifications-dropdown__box">
+                      <div class="notifications-dropdown__wrap">
+                        <div class="notifications-dropdown__header">
+                          <div class="content-header">
+                            <div class="content-header__title">
+                              <h3>Notifications</h3>
+                            </div>
+                            <div class="content-header__close">
+                              <div class="close" data-dropdown-close="notifications">
+                                <svg class="svg-icon svg-icon--alto" width="15" height="15">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                                </svg>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="header__dropdown">
-                  <div class="select js-select select--inline select--h-100">
+                  <div class="select js-select select--transparent header__dropdown-lang">
                     <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                     </button>
                     <div class="select__dropdown js-select-dropdown">
-                      <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
+                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
                         <div class="select__options js-select-options">
                           <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
                           <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
@@ -90,7 +109,7 @@
                         </svg>
                       </div>
                     </div>
-                    <div class="dropdown__body user-dropdown__body">
+                    <div class="dropdown__box user-dropdown__box">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
                           <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link " href="settings-page.html">
@@ -162,7 +181,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="dropdown__body manage-position-dropdown__body">
+                  <div class="dropdown__box manage-position-dropdown__box">
                     <div class="manage-position-dropdown__title">
                       <h5>Create postion</h5>
                     </div>
@@ -187,7 +206,7 @@
                           <div class="dropdown__toggle permissions-control-dropdown__toggle" data-dropdown-toggle="permissions-control-dropdown">
                             <button class="burger "><span></span></button>
                           </div>
-                          <div class="dropdown__body permissions-control-dropdown__body">
+                          <div class="dropdown__box permissions-control-dropdown__box">
                             <div class="permissions-control-dropdown__button">
                               <button class="button button--fluid button--border-boston-blue" type="button" data-dropdown-close="permissions-control-dropdown"><span>Edit</span>
                                 <svg class="svg-icon svg-icon--boston-blue button__icon" width="12" height="12">
