--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -50,22 +50,41 @@
                       </div>
                       <div class="notifications-dropdown__toggle-title">4</div>
                     </div>
-                    <div class="dropdown__body notifications-dropdown__body">
-                      <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                    <div class="dropdown__box notifications-dropdown__box">
+                      <div class="notifications-dropdown__wrap">
+                        <div class="notifications-dropdown__header">
+                          <div class="content-header">
+                            <div class="content-header__title">
+                              <h3>Notifications</h3>
+                            </div>
+                            <div class="content-header__close">
+                              <div class="close" data-dropdown-close="notifications">
+                                <svg class="svg-icon svg-icon--alto" width="15" height="15">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                                </svg>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="header__dropdown">
-                  <div class="select js-select select--inline select--h-100">
+                  <div class="select js-select select--transparent header__dropdown-lang">
                     <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                     </button>
                     <div class="select__dropdown js-select-dropdown">
-                      <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
+                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
                         <div class="select__options js-select-options">
                           <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
                           <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
@@ -90,7 +109,7 @@
                         </svg>
                       </div>
                     </div>
-                    <div class="dropdown__body user-dropdown__body">
+                    <div class="dropdown__box user-dropdown__box">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
                           <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link is-active" href="settings-page.html">
@@ -588,7 +607,7 @@
                                     </svg>
                                   </button>
                                 </div>
-                                <div class="dropdown__body skills-dropdown__body">
+                                <div class="dropdown__box skills-dropdown__box">
                                   <div class="skills-dropdown__header">
                                     <h5>Skills</h5>
                                     <h5 class="text-silver-chalice">5234 skills</h5>
@@ -805,7 +824,7 @@
                                     </svg>
                                   </button>
                                 </div>
-                                <div class="dropdown__body skills-dropdown__body">
+                                <div class="dropdown__box skills-dropdown__box">
                                   <div class="skills-dropdown__header">
                                     <h5>Skills</h5>
                                     <h5 class="text-silver-chalice">5234 skills</h5>
