edit-acatar-tool was fixed

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -2856,17 +2856,21 @@
             </div>
           </div>
           <div class="edit-avatar-tool__buttons">
-            <button class="button button--transparent edit-avatar-tool__delete" type="button">Delete current photo
-            </button>
-            <div class="button-group">
-              <label class="button button--alabaster button-group__button edit-avatar-tool__upload">
-                <input class="input--alabaster input--hidden" type="file" accept="image/*"><span>Upload new</span>
-                <svg class="svg-icon svg-icon--surfie-green button__icon" width="10" height="10">
-                  <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                </svg>
-              </label>
-              <button class="button button--surfie-green button-group__button" type="button" data-modal-close="edit-avatar-modal">Apply
+            <div class="edit-avatar-tool__buttons-left">
+              <button class="button button--transparent edit-avatar-tool__delete" type="button">Delete current photo
               </button>
+            </div>
+            <div class="edit-avatar-tool__buttons-right">
+              <div class="button-group">
+                <label class="button button--alabaster button-group__button edit-avatar-tool__upload">
+                  <input class="input--alabaster input--hidden" type="file" accept="image/*"><span>Upload new</span>
+                  <svg class="svg-icon svg-icon--surfie-green button__icon" width="10" height="10">
+                    <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                  </svg>
+                </label>
+                <button class="button button--surfie-green button-group__button" type="button" data-modal-close="edit-avatar-modal">Apply
+                </button>
+              </div>
             </div>
           </div>
         </div>
