employee settings page was refactored

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -2357,7 +2357,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="catalog__content-item tabs__content js-tab-content" data-content="notifications">
+                <div class="catalog__content-item tabs__content js-tab-content" data-content="permissions">
                   <div class="catalog__content-wrap">
                     <div class="row">
                       <div class="col-12 col-md-6 col-xl-4 col-xxl-3 offset-0 offset-xxl-1 mb-40">
