permissions-control-dropdown was fixed

--- a/app/static/permissions-page.html
+++ b/app/static/permissions-page.html
@@ -208,14 +208,14 @@
                           </div>
                           <div class="dropdown__box permissions-control-dropdown__box">
                             <div class="permissions-control-dropdown__button">
-                              <button class="button button--fluid button--border-boston-blue" type="button" data-dropdown-close="permissions-control-dropdown"><span>Edit</span>
+                              <button class="button button--fluid button--border-boston-blue" type="button"><span>Edit</span>
                                 <svg class="svg-icon svg-icon--boston-blue button__icon" width="12" height="12">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
                                 </svg>
                               </button>
                             </div>
                             <div class="permissions-control-dropdown__button">
-                              <button class="button button--fluid button--border-brick-red" type="button" data-dropdown-close="permissions-control-dropdown">Delete
+                              <button class="button button--fluid button--border-brick-red" type="button">Delete
                               </button>
                             </div>
                           </div>
